--- a/1.css
+++ b/1.css
@@ -2,14 +2,13 @@
   margin: 0;
   background-size: cover;
 }
-.hero {
-  width: 100vw;
-  height: 100vh;
-  background-image: url(pic.jpg);
-}
 .grid {
   display: grid;
   grid-template-columns: 1.2fr 0.8fr;
+  grid-template-rows: 1fr;
+  width: 100vw;
+  min-height: 100vh;
+  background-image: url(pic.jpg);
 }
 .left {
   display: grid;
@@ -40,4 +39,10 @@
 
 a:visited {
   color: white;
+}
+@media (max-width: 820px) {
+  .grid {
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
+  }
 }
